--- a/src/view/assets/index.css
+++ b/src/view/assets/index.css
@@ -4,25 +4,37 @@
   /* Color set */
   --foregroundColor: #000;
   --backgroundColor: #FAF9F0;
+  --frameColor: #2F67B1;
+  --subColor: #828282;
 }
 
 html {
   font-family: 'HK Grotesk';
   font-weight: 500;
-  background-color: var(--backgroundColor);
+  background-color: var(--frameColor);
 }
 
 main {
   margin: * auto;
-  padding: 1em;
+  padding: * 2em;
   max-width: 700px;
-  background-color: #FAF9F0;
+  /* Frame */
+  background-color: var(--backgroundColor);
 }
 
-header {
+header.title {
+  padding: 2em *;
   font-family: 'Zilla Slab', sans-serif;
-  font-size: 2em;
-  text-align: center;
+  text-transform: lowercase;
+}
+
+header.title h1 {
+  font-size: 2.5em;
+  font-weight: 300;
+}
+
+header.title strong {
+  font-weight: 700;
 }
 
 a {
@@ -33,6 +45,10 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+a:visited {
+  color: var(--subColor);
 }
 
 .content {
@@ -48,9 +64,9 @@ a:hover {
 }
 
 .favicon {
+  padding-right: 1em;
   border-radius: 50px;
-  size: 32px;
-  padding: * 1em;
+  size: 24px;
 }
 
 .article a {
@@ -65,6 +81,7 @@ a:hover {
 
 .info {
   margin: 0;
+  color: var(--subColor);
   font-size: 0.85em;
   font-weight: lighter;
 }
@@ -72,3 +89,9 @@ a:hover {
 .options {
   text-align: center;
 }
+
+.host-name {
+  font-size: 0.85em;
+}
+
+
