--- a/src/view/assets/index.css
+++ b/src/view/assets/index.css
@@ -61,7 +61,7 @@ html {
   background-color: var(--frameColor);
 }
 
-main {
+#root-component {
   margin: * auto;
   padding: * 2em;
   max-width: 700px;
@@ -289,7 +289,7 @@ a.article__hostname {
 /* Responsive settings */
 
 @media (--medium-viewport) {
-  main {
+  #root-component {
     padding: * 1em;
   }
   .title {
